# rust-cryptocurrency-demo

./: Cargo.toml  LICENCE  README.md
compose/: docker-compose.yml
requests/: add-new-peer-1.rest  create-wallet-1.rest  create-wallet-2.rest  mempool.rest  network.rest  peers.rest  transfer-funds.rest
samples/: create-wallet-1.json  create-wallet-1.rest  create-wallet-2.rest  transfer-funds.rest
src/: cryptocurrency.rs  main.rs
testnet/: 0.toml  1.toml  2.toml  3.toml  run-auditors.sh  run4-validators.sh
